<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">메 뉴</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="owner">가맹점주</string>
    <string name="user">일반사용자</string>
    <string name="btn_choice_text">해당되는 버튼을 클릭하세요</string>
    <string name="signUp">회원가입</string>
    <string name="signUpWith">SignUp with</string>

    <string name="owner_id_hint">가맹점주 아이디 입력</string>
    <string name="id_hint">아이디 입력</string>
    <string name="pwd_hint">비밀번호 입력</string>
    <string name="pwd_hint2">확인 비밀번호 입력</string>
    <string name="owner_num_hint">사업자 번호 입력</string>
    <string name="store_name_hint">가맹점명 입력</string>
    <string name="store_loc_hint">가맹점 위치 입력</string>
    <string name="owner_name_hint">가맹점주 입력</string>
    <string name="store_hp_hint">가맹점 전화번호 입력</string>
    <string name="user_name_hint">이름 입력</string>
    <string name="user_ph_hint">전화번호 입력</string>

    <string name="login_hint">로그인</string>
    <string name="find_pwd">비밀번호 찾기</string>

    <string name="seat_manage">좌석 관리</string>
    <string name="menu_manage">메뉴 관리</string>
    <string name="check_sales">매출 확인</string>

    <string name="add">추가</string>
    <string name="menu">메뉴</string>
    <string name="basket">장바구니</string>

    <string name="find_store">매장 검색</string>
    <string name="qr_camera">QR 카메라</string>
</resources>