<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/signUp"
            android:textColor="#0E3F6C"
            android:fontFamily="@font/elicebold"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#0E3F6C" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <View
            android:id="@+id/view"
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_marginTop="50dp"
            android:background="#0E3F6C"
            android:layout_gravity="top"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="129dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/signUpWith"
            android:textColor="#0E3F6C"
            android:fontFamily="@font/cafe"
            android:textSize="18sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_marginTop="50dp"
            android:background="#0E3F6C"
            android:layout_gravity="top"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signup_user_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/gray_color_box_border"
                android:color="#2196F3"
                android:hint="@string/id_hint"
                android:paddingStart="15dp"
                android:fontFamily="@font/eliceregular"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signup_user_pwd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_color_box_border"
                android:color="#2196F3"
                android:hint="@string/pwd_hint"
                android:paddingStart="15dp"
                android:fontFamily="@font/eliceregular"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signup_user_pwd2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_color_box_border"
                android:color="#2196F3"
                android:hint="@string/pwd_hint2"
                android:paddingStart="15dp"
                android:fontFamily="@font/eliceregular"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signup_user_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_color_box_border"
                android:color="#2196F3"
                android:hint="@string/user_name_hint"
                android:paddingStart="15dp"
                android:fontFamily="@font/eliceregular"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signup_user_phnum"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_color_box_border"
                android:color="#2196F3"
                android:hint="@string/user_ph_hint"
                android:paddingStart="15dp"
                android:fontFamily="@font/eliceregular"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/button5"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_button"
            android:onClick="SignUp_UserRequest"
            android:text="@string/signUp"
            android:textColor="#0E3F6C"
            android:fontFamily="@font/elicebold"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>